[package]
name = "npt-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "macros", "time"] }
warp = { version = "0.3", default-features = false, features = ["websocket"] }
futures-util = { version = "0.3", default-features = false }